<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPassword">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2Izquierda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2Derecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90178573" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2LogoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0782347" />

    <!-- logo -->
    <ImageView
        android:id="@+id/imageSrc"
        android:layout_width="331dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/fp2LogoBottom"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toTopOf="@+id/fp2LogoTop"
        app:srcCompat="?attr/imageSrc" />
    <!-- end logo -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2LogoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1554664" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2TextTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <!-- New password text-->
    <TextView
        android:id="@+id/textfp2"
        style="@style/Title1Style"
        android:layout_width="363dp"
        android:layout_height="166dp"
        android:text="@string/fp2Text"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/fp2TextButton"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toTopOf="@+id/fp2TextTop" />
    <!-- end Forgot password text-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <!-- text subtitle -->
    <TextView
        android:id="@+id/textView"
        style="@style/subtitleStyle"
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:text="@string/fp2Textsubtitle"
        app:layout_constraintBottom_toTopOf="@+id/fp2TextSubtitleButtom"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toTopOf="@+id/fp2TextButton" />
    <!-- end text subtitle -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2TextSubtitleButtom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48244736" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2CodeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <!-- Code-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/code"
        app:layout_constraintBottom_toTopOf="@+id/fp2CodeButton"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toTopOf="@+id/fp2CodeTop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>
    <!-- end code-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2CodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <!-- Password-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/fp2CodeButton"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toBottomOf="@+id/fp2PasswordBottom">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- end Password-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2PasswordBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <!--Repeat password-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/repeatPassword"
        app:layout_constraintBottom_toTopOf="@+id/fp2PasswordBottom"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toBottomOf="@+id/fp2RepeatPasswordBottom">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--end Repeat password-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2RepeatPasswordBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2ButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <!-- Button new password -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send"
        style="@style/ButtonStyle"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/fp2ButtonBottom"
        app:layout_constraintEnd_toStartOf="@+id/fp2Derecha"
        app:layout_constraintStart_toStartOf="@+id/fp2Izquierda"
        app:layout_constraintTop_toTopOf="@+id/fp2ButtonTop" />
    <!-- end Button new password -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fp2ButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

</androidx.constraintlayout.widget.ConstraintLayout>