<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApp"
    tools:context=".login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginIzquierda"
        android:layout_width="0dp"
        android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginDerecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.90178573" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginLogoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0782347" />

    <!-- logo -->
    <ImageView
        android:id="@+id/imageSrc"
        android:layout_width="331dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/loginLogoBottom"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toTopOf="@+id/loginLogoTop"
        app:srcCompat="?attr/imageSrc" />
    <!-- end logo -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginLogoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1554664" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTextTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <!-- Login buu-->
    <TextView
        android:id="@+id/textLogin"
        style="@style/Title1Style"
        android:layout_width="358dp"
        android:layout_height="82dp"
        android:layout_marginEnd="40dp"
        android:text="@string/loginText"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/loginTextButton"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toTopOf="@+id/loginTextTop" />
    <!-- end Login-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35105315" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTextContinueTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36008024" />

    <!-- Sign in to continue-->
    <TextView
        android:id="@+id/textContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textContinue"
        style="@style/subtitleStyle"
        app:layout_constraintBottom_toTopOf="@+id/loginTextContinueBottom"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toTopOf="@+id/loginTextContinueTop"
        app:layout_constraintVertical_bias="0.0" />
    <!-- end Sign in to continue-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTextContinueBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3881645" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginEmailTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43630892" />

    <!-- Email-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailTop"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- end email-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginEmailBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4994985" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginPasswordTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53460383" />

    <!-- Password-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordTop"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--end Password-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginPasswordBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59578735" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66298896" />

    <!-- Button login -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/ButtonStyle"
        android:layout_width="360dp"
        android:layout_height="61dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonBottom"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toTopOf="@+id/loginButtonTop" />
    <!-- end Button login -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginButtonBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72417253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginForgotTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7572718" />
    <!-- Forgot password -->
    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/loginForgotPassword"
        style="@style/subtitleStyle"
        app:layout_constraintBottom_toTopOf="@+id/loginForgotBottom"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toTopOf="@+id/loginForgotTop"
        app:layout_constraintVertical_bias="0.0" />
    <!-- end Forgot password -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginForgotBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <!-- do not have accound yet? -->
    <TextView
        android:id="@+id/textNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNoAccount"
        style="@style/subtitleStyle"
        app:layout_constraintBottom_toTopOf="@+id/loginNoAccountBottom"
        app:layout_constraintEnd_toStartOf="@+id/loginDerecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginIzquierda"
        app:layout_constraintTop_toTopOf="@+id/loginForgotBottom"
        app:layout_constraintVertical_bias="0.0" />
    <!-- end do not have accound yet? -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginNoAccountBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />


</androidx.constraintlayout.widget.ConstraintLayout>
